[package]
name = "exchange-client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.63"
# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }
web-sys = { version = "0.3", features = ["Window", "Document", "console"] }
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
plotters = "0.3" # use with caution in wasm, or consider `plotters-canvas`
shared = { path = "../shared" }
console_error_panic_hook = { version = "0.1.6", optional = true }

[dependencies.plotters-canvas]
version = "0.3"
optional = true

[features]
default = ["plotters-canvas", "console_error_panic_hook"]

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"