[package]
name = "exchange-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Optional
shared = { path = "../shared" }
strum_macros = "0.27.1"
strum = "0.27.1"
parking_lot = "0.12.4"
